fix: adjust routes
